add default org store structure