@@ -44,7 +44,7 @@ import java.util.*;
 public class ProductServiceImpl extends SalesManagerEntityServiceImpl<Long, Product> implements ProductService {
 
 
-    ProductRepository productRepository;
+    private final ProductRepository productRepository;
 
     @Autowired
     @Lazy
@@ -90,7 +90,7 @@ public class ProductServiceImpl extends SalesManagerEntityServiceImpl<Long, Prod
     public void addProductDescription(Product product, ProductDescription description) throws ServiceException {
 
         if (product.getDescriptions() == null) {
-            product.setDescriptions(new HashSet<ProductDescription>());
+            product.setDescriptions(new HashSet<>());
         }
 
         product.getDescriptions().add(description);
@@ -166,7 +166,7 @@ public class ProductServiceImpl extends SalesManagerEntityServiceImpl<Long, Prod
         // Get the category list
         StringBuilder lineage = new StringBuilder().append(category.getLineage()).append(category.getId()).append("/");
         List<Category> categories = categoryService.getListByLineage(category.getMerchantStore(), lineage.toString());
-        Set<Long> categoryIds = new HashSet<Long>();
+        Set<Long> categoryIds = new HashSet<>();
         for (Category c : categories) {
 
             categoryIds.add(c.getId());
@@ -250,9 +250,7 @@ public class ProductServiceImpl extends SalesManagerEntityServiceImpl<Long, Prod
         Assert.notEmpty(product.getAvailabilities(), "product must have at least one availability");
 
         // take care of product images separately
-        Set<ProductImage> originalProductImages = new HashSet<ProductImage>(product.getImages());
-
-        /** save product first **/
+        Set<ProductImage> originalProductImages = new HashSet<>(product.getImages());
 
         if (product.getId() != null && product.getId() > 0) {
             super.update(product);
@@ -260,10 +258,7 @@ public class ProductServiceImpl extends SalesManagerEntityServiceImpl<Long, Prod
             super.create(product);
         }
 
-        /**
-         * Image creation needs extra service to save the file in the CMS
-         */
-        List<Long> newImageIds = new ArrayList<Long>();
+        List<Long> newImageIds = new ArrayList<>();
         Set<ProductImage> images = product.getImages();
 
         try {
@@ -365,7 +360,7 @@ public class ProductServiceImpl extends SalesManagerEntityServiceImpl<Long, Prod
             if (products.isEmpty()) {
                 throw new ServiceException("Cannot get product with sku [" + productCode + "]");
             }
-            Long id = products.get(0);
+            Long id = products.getFirst();
             return productRepository.getById(id, merchant, language);
         } catch (Exception e) {
             throw new ServiceException("Cannot get product with sku [" + productCode + "]", e);
@@ -381,7 +376,7 @@ public class ProductServiceImpl extends SalesManagerEntityServiceImpl<Long, Prod
             if (products.isEmpty()) {
                 throw new ServiceException("Cannot get product with sku [" + productCode + "]");
             }
-            return this.findOne(products.get(0), merchant);
+            return this.findOne(products.getFirst(), merchant);
         } catch (Exception e) {
             throw new ServiceException("Cannot get product with sku [" + productCode + "]", e);
         }
